<resources>
    <string name="app_name">Calculadora</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="but_AC">AC</string>
    <string name="but_CE">CE</string>
    <string name="but_add">+</string>
    <string name="but_minus">_</string>
    <string name="but_Multiply">*</string>
    <string name="but_Divide">/</string>
    <string name="but_1">1</string>
    <string name="but_2">2</string>
    <string name="but_3">3</string>
    <string name="but_4">4</string>
    <string name="but_5">5</string>
    <string name="but_6">6</string>
    <string name="but_7">7</string>
    <string name="but_8">8</string>
    <string name="but_9">9</string>
    <string name="but_0">0</string>
    <string name="but_equals">=</string>

</resources>
